clean up LitPop-tutorial

--- a/script/tutorial/climada_entity_LitPop.ipynb
+++ b/script/tutorial/climada_entity_LitPop.ipynb
@@ -34,14 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-02-14 15:26:54,011 - climada - DEBUG - Loading default config file: /Users/eberenzs/Documents/Projects/climada_python/climada/conf/defaults.conf\n"
+      "2019-02-15 12:42:31,486 - climada - DEBUG - Loading default config file: /Users/eberenzs/Documents/Projects/climada_python/climada/conf/defaults.conf\n"
      ]
     },
     {
@@ -58,7 +60,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from matplotlib import colors\n",
-    "from cartopy.io import shapereader\n",
     "from iso3166 import countries as iso_cntry\n",
     "\n",
     "from climada.entity.exposures.litpop import LitPop"
@@ -76,7 +77,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -143,7 +146,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -210,7 +215,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -415,7 +422,9 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -475,7 +484,9 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -550,46 +561,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-02-14 16:48:53,908 - climada.entity.exposures.litpop - INFO - Generating LitPop data at a resolution of 120 arcsec.\n",
-      "2019-02-14 16:48:53,909 - climada.entity.exposures.nightlight - DEBUG - Found all required satellite data (1 files) in folder /Users/eberenzs/Documents/Projects/climada_python/data/system\n",
-      "2019-02-14 16:48:53,909 - climada.entity.exposures.litpop - DEBUG - Reading and cropping neccessary BM files.\n",
-      "2019-02-14 16:48:53,910 - climada.entity.exposures.litpop - DEBUG - Trying to import the file /Users/eberenzs/Documents/Projects/climada_python/data/system/BlackMarble_2016_C2_geo_gray.tif.\n",
-      "2019-02-14 16:48:56,277 - climada.entity.exposures.litpop - DEBUG - Reading file completed: /Users/eberenzs/Documents/Projects/climada_python/data/system/BlackMarble_2016_C2_geo_gray.tif.\n",
-      "2019-02-14 16:48:56,278 - climada.entity.exposures.litpop - DEBUG - Resizing image according to chosen resolution\n",
-      "2019-02-14 16:48:58,010 - climada.entity.exposures.litpop - DEBUG - Cutting the bounding box took 1 s.\n",
-      "2019-02-14 16:48:58,116 - climada.entity.exposures.litpop - DEBUG - Reducing to one dimension...\n",
-      "2019-02-14 16:48:58,178 - climada.entity.exposures.gpw_import - INFO - Reference year: 2014. Using nearest available year for GWP population data: 2015\n",
-      "2019-02-14 16:48:58,178 - climada.entity.exposures.gpw_import - DEBUG - Trying to import the file /Users/eberenzs/Documents/Projects/climada_python/data/system/gpw_v4_population_count_rev10_2015_30_sec.tif\n",
-      "2019-02-14 16:49:12,359 - climada.util.finance - INFO - GDP TZA 2014: 4.822e+10.\n",
-      "2019-02-14 16:49:12,897 - climada.util.finance - INFO - GDP RWA 2014: 8.017e+09.\n",
-      "2019-02-14 16:49:13,510 - climada.util.finance - INFO - GDP BDI 2014: 2.706e+09.\n",
-      "2019-02-14 16:49:13,658 - climada.entity.exposures.litpop - DEBUG - Extracting subshapes and detecting enclaves...\n",
-      "2019-02-14 16:49:13,665 - climada.entity.exposures.litpop - DEBUG - Successfully isolated coordinates from shape\n",
-      "2019-02-14 16:49:13,837 - climada.entity.exposures.litpop - DEBUG - Extracting subshapes and detecting enclaves...\n",
-      "2019-02-14 16:49:13,845 - climada.entity.exposures.litpop - DEBUG - Successfully isolated coordinates from shape\n",
-      "2019-02-14 16:49:14,011 - climada.entity.exposures.litpop - DEBUG - Extracting subshapes and detecting enclaves...\n",
-      "2019-02-14 16:49:14,012 - climada.entity.exposures.litpop - DEBUG - Detected subshapes: 7\n",
-      "2019-02-14 16:49:14,012 - climada.entity.exposures.litpop - DEBUG - of which detected enclaves: 0\n",
-      "2019-02-14 16:49:14,435 - climada.entity.exposures.litpop - DEBUG - Successfully isolated coordinates from shape\n",
-      "2019-02-14 16:49:14,885 - climada.entity.exposures.litpop - INFO - Creating the LitPop exposure took 25.01s\n",
-      "2019-02-14 16:49:14,886 - climada.entity.exposures.base - INFO - centr_ not set.\n",
-      "2019-02-14 16:49:14,886 - climada.entity.exposures.base - INFO - geometry not set.\n",
-      "2019-02-14 16:49:14,887 - climada.entity.exposures.base - INFO - deductible not set.\n",
-      "2019-02-14 16:49:14,887 - climada.entity.exposures.base - INFO - cover not set.\n",
-      "2019-02-14 16:49:14,888 - climada.entity.exposures.base - INFO - category_id not set.\n",
-      "2019-02-14 16:49:14,889 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n"
+      "2019-02-15 12:42:58,182 - climada.entity.exposures.litpop - INFO - Generating LitPop data at a resolution of 120 arcsec.\n",
+      "2019-02-15 12:42:58,185 - climada.entity.exposures.nightlight - DEBUG - Found all required satellite data (1 files) in folder /Users/eberenzs/Documents/Projects/climada_python/data/system\n",
+      "2019-02-15 12:42:58,186 - climada.entity.exposures.litpop - DEBUG - Reading and cropping neccessary BM files.\n",
+      "2019-02-15 12:42:58,187 - climada.entity.exposures.litpop - DEBUG - Trying to import the file /Users/eberenzs/Documents/Projects/climada_python/data/system/BlackMarble_2016_C2_geo_gray.tif.\n",
+      "2019-02-15 12:43:00,534 - climada.entity.exposures.litpop - DEBUG - Reading file completed: /Users/eberenzs/Documents/Projects/climada_python/data/system/BlackMarble_2016_C2_geo_gray.tif.\n",
+      "2019-02-15 12:43:00,535 - climada.entity.exposures.litpop - DEBUG - Resizing image according to chosen resolution\n",
+      "2019-02-15 12:43:02,366 - climada.entity.exposures.litpop - DEBUG - Cutting the bounding box took 1 s.\n",
+      "2019-02-15 12:43:02,496 - climada.entity.exposures.litpop - DEBUG - Reducing to one dimension...\n",
+      "2019-02-15 12:43:02,569 - climada.entity.exposures.gpw_import - INFO - Reference year: 2014. Using nearest available year for GWP population data: 2015\n",
+      "2019-02-15 12:43:02,571 - climada.entity.exposures.gpw_import - DEBUG - Trying to import the file /Users/eberenzs/Documents/Projects/climada_python/data/system/gpw_v4_population_count_rev10_2015_30_sec.tif\n",
+      "2019-02-15 12:43:18,508 - climada.util.finance - INFO - GDP TZA 2014: 4.822e+10.\n",
+      "2019-02-15 12:43:19,007 - climada.util.finance - INFO - GDP RWA 2014: 8.017e+09.\n",
+      "2019-02-15 12:43:19,523 - climada.util.finance - INFO - GDP BDI 2014: 2.706e+09.\n",
+      "2019-02-15 12:43:19,691 - climada.entity.exposures.litpop - DEBUG - Extracting subshapes and detecting enclaves...\n",
+      "2019-02-15 12:43:19,699 - climada.entity.exposures.litpop - DEBUG - Successfully isolated coordinates from shape\n",
+      "2019-02-15 12:43:19,902 - climada.entity.exposures.litpop - DEBUG - Extracting subshapes and detecting enclaves...\n",
+      "2019-02-15 12:43:19,908 - climada.entity.exposures.litpop - DEBUG - Successfully isolated coordinates from shape\n",
+      "2019-02-15 12:43:20,080 - climada.entity.exposures.litpop - DEBUG - Extracting subshapes and detecting enclaves...\n",
+      "2019-02-15 12:43:20,081 - climada.entity.exposures.litpop - DEBUG - Detected subshapes: 7\n",
+      "2019-02-15 12:43:20,081 - climada.entity.exposures.litpop - DEBUG - of which detected enclaves: 0\n",
+      "2019-02-15 12:43:20,513 - climada.entity.exposures.litpop - DEBUG - Successfully isolated coordinates from shape\n",
+      "2019-02-15 12:43:21,011 - climada.entity.exposures.litpop - INFO - Creating the LitPop exposure took 27.04s\n",
+      "2019-02-15 12:43:21,012 - climada.entity.exposures.base - INFO - centr_ not set.\n",
+      "2019-02-15 12:43:21,013 - climada.entity.exposures.base - INFO - geometry not set.\n",
+      "2019-02-15 12:43:21,014 - climada.entity.exposures.base - INFO - deductible not set.\n",
+      "2019-02-15 12:43:21,016 - climada.entity.exposures.base - INFO - cover not set.\n",
+      "2019-02-15 12:43:21,018 - climada.entity.exposures.base - INFO - category_id not set.\n",
+      "2019-02-15 12:43:21,019 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n"
      ]
     }
    ],
    "source": [
-    "# GDP-Entity for Tanzania, Rwanda, and Burundi:\n",
+    "# Initiate GDP-Entity for Tanzania, Rwanda, and Burundi:\n",
     "ent = LitPop()\n",
     "countries_list = ['BDI', 'RWA', 'TZA']\n",
     "ent.set_country(countries_list, res_arcsec=120, reference_year=2014, fin_mode='gdp')"
@@ -598,7 +611,9 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -648,7 +663,7 @@
     }
    ],
    "source": [
-    "# Plotting:\n",
+    "# Plot GDP-Entity for Tanzania, Rwanda, and Burundi:\n",
     "ent.plot_hexbin(linewidth=2, buffer_deg=.3) # linear colormap\n",
     "ent.plot_hexbin(linewidth=2, buffer_deg=.3, bins='log') # logarithmic colormap\n",
     "norm=colors.LogNorm(vmin=1.5e2, vmax=1.5e9) # setting range for the log-normal scale\n",
@@ -667,18 +682,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Exposure entity exported to/Users/eberenzs/Documents/Projects/climada_python/data/export/LitPop_Exposure_Burundi_Tanzania_Rwanda.csv'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/plain": [
@@ -717,18 +725,20 @@
     }
    ],
    "source": [
+    "# Export LitPop based entity to CSV:\n",
     "# set output path:\n",
     "import os\n",
-    "from climada.util.constants import DATA_DIR\n",
-    "output_path = os.path.join(DATA_DIR, 'export')\n",
-    "if not os.path.isdir(output_path):\n",
+    "from climada.util.constants import DATA_DIR # default CLIMADA-data directory\n",
+    "output_path = os.path.join(DATA_DIR, 'export') # subfolder export\n",
+    "if not os.path.isdir(output_path): # create output folder if it does not exist\n",
     "    os.mkdir(output_path)\n",
-    "# set file name:\n",
+    "# set output file path:\n",
     "output_path = os.path.join(output_path, 'LitPop_Exposure_Burundi_Tanzania_Rwanda.csv')\n",
-    "# Export:\n",
+    "# Export data:\n",
     "ent.to_csv(output_path, sep=',')\n",
     "\n",
-    "display('Exposure entity exported to' + output_path)\n",
+    "# display('Exposure entity exported to' + output_path)\n",
+    "\n",
     "# Note that the variable \"region_id\" in the exported CSV file is a number identifying the country, i.e.:\n",
     "display('Examples for region_id:')\n",
     "display('Burundi: ' + str(iso_cntry.get('BDI').numeric))\n",
