add explanation for downloading ibtracs data

--- a/script/tutorial/climada_hazard_TropCyclone.ipynb
+++ b/script/tutorial/climada_hazard_TropCyclone.ipynb
@@ -43,6 +43,8 @@
    "source": [
     "The method `read_ibtracs_netcdf()` generates the `Datasets` for tracks selected by IBTrACS id, or by basin and year range. To achieve this, it downloads the first time the [IBTrACS data v4 in netcdf format](ftp://eclipse.ncdc.noaa.gov/pub/ibtracs//v04r00/provisional/netcdf/IBTrACS.ALL.v04r00.nc) and stores it in `climada_python/data/system`. The tracks can be accessed later either using the attribute `data` or using `get_track()`, which allows to select tracks by its name (its IBTrACS id). Use the method `append()` to extend the `data` list.\n",
     "\n",
+    "If you get an error downloading the IBTrACS data, try to manually access [ftp://eclipse.ncdc.noaa.gov/pub/ibtracs//v04r00/provisional/netcdf/](ftp://eclipse.ncdc.noaa.gov/pub/ibtracs//v04r00/provisional/netcdf/) and copy the file `IBTrACS.ALL.v04r00.nc` to `climada_python/data/system`.\n",
+    "\n",
     "To visualize the tracks use `plot()`.\n"
    ]
   },
