--- a/script/tutorial/climada_entity_Exposures.ipynb
+++ b/script/tutorial/climada_entity_Exposures.ipynb
@@ -45,7 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-04 09:46:23,926 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
+      "2019-03-07 18:49:59,843 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
      ]
     },
     {
@@ -70,19 +70,19 @@
       "4      4      15.0  20.808081      1\n",
       "\n",
       "\u001b[1;03;30;30mexp_df is now an Exposures: <class 'climada.entity.exposures.base.Exposures'>\u001b[0m\n",
-      "2019-03-04 09:46:25,914 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
+      "2019-03-07 18:50:01,073 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
       "\n",
       "\u001b[1;03;30;30mcheck method logs:\u001b[0m\n",
-      "2019-03-04 09:46:25,993 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
-      "2019-03-04 09:46:25,993 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
+      "2019-03-07 18:50:01,146 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
+      "2019-03-07 18:50:01,147 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
       " Description: \n",
-      "2019-03-04 09:46:25,994 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
-      "2019-03-04 09:46:25,994 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
-      "2019-03-04 09:46:25,995 - climada.entity.exposures.base - INFO - centr_ not set.\n",
-      "2019-03-04 09:46:25,998 - climada.entity.exposures.base - INFO - deductible not set.\n",
-      "2019-03-04 09:46:25,998 - climada.entity.exposures.base - INFO - cover not set.\n",
-      "2019-03-04 09:46:25,999 - climada.entity.exposures.base - INFO - category_id not set.\n",
-      "2019-03-04 09:46:25,999 - climada.entity.exposures.base - INFO - region_id not set.\n",
+      "2019-03-07 18:50:01,147 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
+      "2019-03-07 18:50:01,147 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
+      "2019-03-07 18:50:01,148 - climada.entity.exposures.base - INFO - centr_ not set.\n",
+      "2019-03-07 18:50:01,149 - climada.entity.exposures.base - INFO - deductible not set.\n",
+      "2019-03-07 18:50:01,150 - climada.entity.exposures.base - INFO - cover not set.\n",
+      "2019-03-07 18:50:01,151 - climada.entity.exposures.base - INFO - category_id not set.\n",
+      "2019-03-07 18:50:01,151 - climada.entity.exposures.base - INFO - region_id not set.\n",
       "\n",
       "\u001b[1;03;30;30mexp_df looks like:\u001b[0m\n",
       "   value  latitude  longitude  if_TC                      geometry\n",
@@ -149,19 +149,19 @@
       "4       Palikir  POINT (158.1499743237623 6.916643696007725)\n",
       "\n",
       "\u001b[1;03;30;30mexp_gpd is now an Exposures: <class 'climada.entity.exposures.base.Exposures'>\u001b[0m\n",
-      "2019-03-04 09:46:26,076 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n",
+      "2019-03-07 18:50:01,198 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n",
       "\n",
       "\u001b[1;03;30;30mcheck method logs:\u001b[0m\n",
-      "2019-03-04 09:46:26,084 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
-      "2019-03-04 09:46:26,085 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
+      "2019-03-07 18:50:01,209 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
+      "2019-03-07 18:50:01,211 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
       " Description: \n",
-      "2019-03-04 09:46:26,085 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
-      "2019-03-04 09:46:26,086 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
-      "2019-03-04 09:46:26,087 - climada.entity.exposures.base - INFO - centr_ not set.\n",
-      "2019-03-04 09:46:26,090 - climada.entity.exposures.base - INFO - deductible not set.\n",
-      "2019-03-04 09:46:26,091 - climada.entity.exposures.base - INFO - cover not set.\n",
-      "2019-03-04 09:46:26,091 - climada.entity.exposures.base - INFO - category_id not set.\n",
-      "2019-03-04 09:46:26,092 - climada.entity.exposures.base - INFO - region_id not set.\n",
+      "2019-03-07 18:50:01,212 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
+      "2019-03-07 18:50:01,213 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
+      "2019-03-07 18:50:01,214 - climada.entity.exposures.base - INFO - centr_ not set.\n",
+      "2019-03-07 18:50:01,216 - climada.entity.exposures.base - INFO - deductible not set.\n",
+      "2019-03-07 18:50:01,218 - climada.entity.exposures.base - INFO - cover not set.\n",
+      "2019-03-07 18:50:01,220 - climada.entity.exposures.base - INFO - category_id not set.\n",
+      "2019-03-07 18:50:01,221 - climada.entity.exposures.base - INFO - region_id not set.\n",
       "\n",
       "\u001b[1;03;30;30mexp_gpd looks like:\u001b[0m\n",
       "           name                                     geometry  value  \\\n",
@@ -245,14 +245,14 @@
       "4            1      1         5      1         5  \n",
       "\n",
       "\u001b[1;03;30;30mexp_templ is now an Exposures: <class 'climada.entity.exposures.base.Exposures'>\u001b[0m\n",
-      "2019-03-04 09:46:26,239 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
+      "2019-03-07 18:50:01,355 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
       "\n",
       "\u001b[1;03;30;30mcheck method logs:\u001b[0m\n",
-      "2019-03-04 09:46:26,242 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
-      "2019-03-04 09:46:26,243 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
+      "2019-03-07 18:50:01,360 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
+      "2019-03-07 18:50:01,361 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
       " Description: \n",
-      "2019-03-04 09:46:26,243 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
-      "2019-03-04 09:46:26,244 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
+      "2019-03-07 18:50:01,362 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
+      "2019-03-07 18:50:01,363 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
       "\n",
       "\u001b[1;03;30;30mexp_templ looks like:\u001b[0m\n",
       "    latitude  longitude         value  deductible         cover  region_id  \\\n",
@@ -342,21 +342,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-04 09:46:26,295 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
-      "2019-03-04 09:46:26,296 - climada.entity.exposures.base - INFO - geometry not set.\n",
-      "2019-03-04 09:46:26,297 - climada.entity.exposures.base - INFO - region_id not set.\n",
       "<class 'climada.entity.exposures.base.Exposures'>\n"
      ]
     }
    ],
    "source": [
-    "# read MATLAB file from climada MATLAB version\n",
-    "from climada.util.constants import ENT_DEMO_MAT\n",
+    "# read MATLAB file from climada MATLAB version with read_mat() \n",
+    "# and the ones generated with the Python version with read_hdf5()\n",
+    "from climada.util.constants import EXP_DEMO_H5\n",
     "\n",
-    "exp_mat = Exposures()\n",
-    "exp_mat.read_mat(ENT_DEMO_MAT)\n",
-    "exp_mat.check()\n",
-    "print(type(exp_mat))"
+    "exp_hdf5 = Exposures()\n",
+    "exp_hdf5.read_hdf5(EXP_DEMO_H5)\n",
+    "exp_hdf5.check()\n",
+    "print(type(exp_hdf5))"
    ]
   },
   {
@@ -368,8 +366,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-04 09:46:26,305 - climada.entity.exposures.base - INFO - Adding sea at 5 km resolution and 10 km distance from coast.\n",
-      "2019-03-04 09:46:28,224 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n"
+      "2019-03-07 18:50:01,575 - climada.entity.exposures.base - INFO - Adding sea at 5 km resolution and 10 km distance from coast.\n",
+      "2019-03-07 18:50:03,321 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n"
      ]
     },
     {
@@ -1197,7 +1195,7 @@
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a1c5c1cf8>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a2f0254e0>]],\n",
        "       dtype=object))"
       ]
      },
@@ -1252,14 +1250,14 @@
      "output_type": "stream",
      "text": [
       "\u001b[1;03;30;30mPlotting exp_gpd.\u001b[0m\n",
-      "2019-03-04 09:46:41,468 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n"
+      "2019-03-07 18:50:15,273 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a1ca72a90>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a20979cc0>]],\n",
        "       dtype=object))"
       ]
      },
@@ -1318,14 +1316,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-04 09:47:00,361 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n"
+      "2019-03-07 18:50:35,297 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a2beb3f98>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a35ad4588>]],\n",
        "       dtype=object))"
       ]
      },
@@ -1367,8 +1365,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-04 09:47:08,900 - climada.entity.exposures.base - INFO - Raster from resolution 0.20202020202019355° to 0.20202020202019355°.\n",
-      "2019-03-04 09:47:14,553 - climada.entity.exposures.base - INFO - Raster from resolution 0.20202020202019355° to 0.5°.\n"
+      "2019-03-07 18:50:44,564 - climada.entity.exposures.base - INFO - Raster from resolution 0.20202020202019355° to 0.20202020202019355°.\n",
+      "2019-03-07 18:50:49,721 - climada.entity.exposures.base - INFO - Raster from resolution 0.20202020202019355° to 0.5°.\n"
      ]
     },
     {
@@ -1421,7 +1419,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a2e4fb518>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a31418278>]],\n",
        "      dtype=object)"
       ]
      },
@@ -1661,7 +1659,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-04 09:47:19,850 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/exp_templ.pkl.p\n"
+      "2019-03-07 18:50:54,562 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/exp_templ.pkl.p\n"
      ]
     }
    ],
