--- a/script/tutorial/climada_entity_Exposures.ipynb
+++ b/script/tutorial/climada_entity_Exposures.ipynb
@@ -16,7 +16,7 @@
     " * **latitude** (pd.Series): latitude\n",
     " * **longitude** (pd.Series): longitude\n",
     " * **value** (pd.Series): a value for each exposure\n",
-    " * **if_*** (pd.Series): e.g. if_TC: impact functions ids for hazard TC. There might be different hazards defined: if_TC, if_FL, ...\n",
+    " * if_ (pd.Series, optional): e.g. if_TC. impact functions ids for hazard TC. There might be different hazards defined: if_TC, if_FL, ... If not provided, set to default `if_` with ids 1 in check().\n",
     " * geometry (pd.Series, optional): geometry of type Point of each instance. Computed in method `set_geometry_points()`\n",
     " * deductible (pd.Series, optional): deductible value for each exposure. Used for insurance\n",
     " * cover (pd.Series, optional): cover value for each exposure. Used for insurance\n",
@@ -24,9 +24,11 @@
     " * region_id (pd.Series, optional): region id (e.g. country ISO code) for each exposure\n",
     " * centr_* (pd.Series, optional): e.g. centr_TC. centroids index for hazard TC. There might be different hazards defined: centr_TC, centr_FL, ... Computed in method `assign_centroids()`\n",
     "\n",
-    "Some of the variables are *optional*. This means that the package `climada.engine` also works without these variables. For instance, the `region_id` and `category_id` values only provide additional information, whilst the `centr_*` variable can be computed if not provided using the method `assign_centroids()`. The attibute `geometry` is only needed to execute the methods of `geopandas` and can be set using the method `set_geometry_points()`.\n",
+    "Some of the variables are *optional*. This means that the package `climada.engine` also works without these variables set. For instance, the `region_id` and `category_id` values only provide additional information, whilst the `centr_*` variable can be computed if not provided using the method `assign_centroids()`. The attibute `geometry` is only needed to execute the methods of `geopandas` and can be set using the method `set_geometry_points()`. \n",
     "\n",
-    "After defining an `Exposures` instance use always the `check()` method to see which attributes are missing. This method will raise an Error if `value`, `longitude`, `latitude` or `if_*` are not set."
+    "`if_` is the most important attribute, since it relates the exposures to the hazard by specifying the impact functions. Ideally it should be set to the specific hazard (e.g. `if_TC`) so that different hazards can be set in the same Exposures (e.g. `if_TC` and `if_FL`). If there isn't any `if_*` value provided, the `check()` method puts a default `if_` with ones which can be used by the impact calculation in `engine`.\n",
+    "\n",
+    "After defining an `Exposures` instance use always the `check()` method to see which attributes are missing. This method will raise an ERROR if `value`, `longitude` or `latitude` ar missing and an INFO messages for the the optional variables not set."
    ]
   },
   {
@@ -45,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-07 18:49:59,843 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
+      "2019-03-12 15:39:03,082 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
      ]
     },
     {
@@ -70,19 +72,19 @@
       "4      4      15.0  20.808081      1\n",
       "\n",
       "\u001b[1;03;30;30mexp_df is now an Exposures: <class 'climada.entity.exposures.base.Exposures'>\u001b[0m\n",
-      "2019-03-07 18:50:01,073 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
+      "2019-03-12 15:39:04,244 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
       "\n",
       "\u001b[1;03;30;30mcheck method logs:\u001b[0m\n",
-      "2019-03-07 18:50:01,146 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
-      "2019-03-07 18:50:01,147 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
+      "2019-03-12 15:39:04,316 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
+      "2019-03-12 15:39:04,317 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
       " Description: \n",
-      "2019-03-07 18:50:01,147 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
-      "2019-03-07 18:50:01,147 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
-      "2019-03-07 18:50:01,148 - climada.entity.exposures.base - INFO - centr_ not set.\n",
-      "2019-03-07 18:50:01,149 - climada.entity.exposures.base - INFO - deductible not set.\n",
-      "2019-03-07 18:50:01,150 - climada.entity.exposures.base - INFO - cover not set.\n",
-      "2019-03-07 18:50:01,151 - climada.entity.exposures.base - INFO - category_id not set.\n",
-      "2019-03-07 18:50:01,151 - climada.entity.exposures.base - INFO - region_id not set.\n",
+      "2019-03-12 15:39:04,317 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
+      "2019-03-12 15:39:04,318 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
+      "2019-03-12 15:39:04,319 - climada.entity.exposures.base - INFO - centr_ not set.\n",
+      "2019-03-12 15:39:04,322 - climada.entity.exposures.base - INFO - deductible not set.\n",
+      "2019-03-12 15:39:04,323 - climada.entity.exposures.base - INFO - cover not set.\n",
+      "2019-03-12 15:39:04,324 - climada.entity.exposures.base - INFO - category_id not set.\n",
+      "2019-03-12 15:39:04,325 - climada.entity.exposures.base - INFO - region_id not set.\n",
       "\n",
       "\u001b[1;03;30;30mexp_df looks like:\u001b[0m\n",
       "   value  latitude  longitude  if_TC                      geometry\n",
@@ -149,19 +151,19 @@
       "4       Palikir  POINT (158.1499743237623 6.916643696007725)\n",
       "\n",
       "\u001b[1;03;30;30mexp_gpd is now an Exposures: <class 'climada.entity.exposures.base.Exposures'>\u001b[0m\n",
-      "2019-03-07 18:50:01,198 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n",
+      "2019-03-12 15:39:04,445 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n",
       "\n",
       "\u001b[1;03;30;30mcheck method logs:\u001b[0m\n",
-      "2019-03-07 18:50:01,209 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
-      "2019-03-07 18:50:01,211 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
+      "2019-03-12 15:39:04,451 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
+      "2019-03-12 15:39:04,454 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
       " Description: \n",
-      "2019-03-07 18:50:01,212 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
-      "2019-03-07 18:50:01,213 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
-      "2019-03-07 18:50:01,214 - climada.entity.exposures.base - INFO - centr_ not set.\n",
-      "2019-03-07 18:50:01,216 - climada.entity.exposures.base - INFO - deductible not set.\n",
-      "2019-03-07 18:50:01,218 - climada.entity.exposures.base - INFO - cover not set.\n",
-      "2019-03-07 18:50:01,220 - climada.entity.exposures.base - INFO - category_id not set.\n",
-      "2019-03-07 18:50:01,221 - climada.entity.exposures.base - INFO - region_id not set.\n",
+      "2019-03-12 15:39:04,455 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
+      "2019-03-12 15:39:04,456 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
+      "2019-03-12 15:39:04,457 - climada.entity.exposures.base - INFO - centr_ not set.\n",
+      "2019-03-12 15:39:04,458 - climada.entity.exposures.base - INFO - deductible not set.\n",
+      "2019-03-12 15:39:04,459 - climada.entity.exposures.base - INFO - cover not set.\n",
+      "2019-03-12 15:39:04,461 - climada.entity.exposures.base - INFO - category_id not set.\n",
+      "2019-03-12 15:39:04,462 - climada.entity.exposures.base - INFO - region_id not set.\n",
       "\n",
       "\u001b[1;03;30;30mexp_gpd looks like:\u001b[0m\n",
       "           name                                     geometry  value  \\\n",
@@ -245,14 +247,14 @@
       "4            1      1         5      1         5  \n",
       "\n",
       "\u001b[1;03;30;30mexp_templ is now an Exposures: <class 'climada.entity.exposures.base.Exposures'>\u001b[0m\n",
-      "2019-03-07 18:50:01,355 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
+      "2019-03-12 15:39:04,545 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
       "\n",
       "\u001b[1;03;30;30mcheck method logs:\u001b[0m\n",
-      "2019-03-07 18:50:01,360 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
-      "2019-03-07 18:50:01,361 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
+      "2019-03-12 15:39:04,548 - climada.entity.exposures.base - INFO - crs set to default value: {'init': 'epsg:4326'}\n",
+      "2019-03-12 15:39:04,549 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
       " Description: \n",
-      "2019-03-07 18:50:01,362 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
-      "2019-03-07 18:50:01,363 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
+      "2019-03-12 15:39:04,551 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
+      "2019-03-12 15:39:04,552 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
       "\n",
       "\u001b[1;03;30;30mexp_templ looks like:\u001b[0m\n",
       "    latitude  longitude         value  deductible         cover  region_id  \\\n",
@@ -366,8 +368,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-07 18:50:01,575 - climada.entity.exposures.base - INFO - Adding sea at 5 km resolution and 10 km distance from coast.\n",
-      "2019-03-07 18:50:03,321 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n"
+      "2019-03-12 15:39:04,752 - climada.entity.exposures.base - INFO - Adding sea at 5 km resolution and 10 km distance from coast.\n",
+      "2019-03-12 15:39:06,548 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n"
      ]
     },
     {
@@ -1195,7 +1197,7 @@
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a2f0254e0>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a28b48f98>]],\n",
        "       dtype=object))"
       ]
      },
@@ -1250,14 +1252,14 @@
      "output_type": "stream",
      "text": [
       "\u001b[1;03;30;30mPlotting exp_gpd.\u001b[0m\n",
-      "2019-03-07 18:50:15,273 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n"
+      "2019-03-12 15:39:18,418 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a20979cc0>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a1f4eb198>]],\n",
        "       dtype=object))"
       ]
      },
@@ -1316,14 +1318,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-07 18:50:35,297 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n"
+      "2019-03-12 15:39:35,071 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a35ad4588>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a2eebfa90>]],\n",
        "       dtype=object))"
       ]
      },
@@ -1365,8 +1367,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-07 18:50:44,564 - climada.entity.exposures.base - INFO - Raster from resolution 0.20202020202019355° to 0.20202020202019355°.\n",
-      "2019-03-07 18:50:49,721 - climada.entity.exposures.base - INFO - Raster from resolution 0.20202020202019355° to 0.5°.\n"
+      "2019-03-12 15:39:42,345 - climada.entity.exposures.base - INFO - Raster from resolution 0.20202020202019355° to 0.20202020202019355°.\n",
+      "2019-03-12 15:39:47,235 - climada.entity.exposures.base - INFO - Raster from resolution 0.20202020202019355° to 0.5°.\n"
      ]
     },
     {
@@ -1419,7 +1421,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a31418278>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a30f17b38>]],\n",
        "      dtype=object)"
       ]
      },
@@ -1659,7 +1661,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-07 18:50:54,562 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/exp_templ.pkl.p\n"
+      "2019-03-12 15:39:52,103 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/exp_templ.pkl.p\n"
      ]
     }
    ],
