--- a/script/tutorial/climada_entity_MeasureSet.ipynb
+++ b/script/tutorial/climada_entity_MeasureSet.ipynb
@@ -21,7 +21,7 @@
     " * name (str): name of the action\n",
     " * haz_type (str): related hazard type (peril), e.g. TC\n",
     " * color_rgb (np.array): integer array of size 3. Gives color code of this measure in RGB\n",
-    " * cost (float): discounted cost (in same units as assets)\n",
+    " * cost (float): discounted cost (in same units as assets). Needs to be provided by the user. See the example provided in `climada_python/data/system/entity_template.xlsx` sheets `_measures_details` and `_discounting_sheet` to see how the discounting is done.\n",
     " \n",
     "Related to a measure's impact:\n",
     " * hazard_set (str): file name of hazard to use\n",
@@ -81,7 +81,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-08 09:34:24,253 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
+      "2019-03-12 15:38:55,624 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
      ]
     },
     {
@@ -90,13 +90,6 @@
      "text": [
       "/Users/aznarsig/anaconda3/envs/climada_env_new/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2019-03-08 09:34:25,876 - climada.entity.measures.base - DEBUG - Transforming impact functions.\n"
      ]
     },
     {
@@ -177,22 +170,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-08 09:34:26,172 - climada.util.checker - DEBUG - Centroids.region_id not set. \n",
-      "2019-03-08 09:34:26,231 - climada.entity.measures.base - DEBUG - Transforming impact functions.\n",
-      "2019-03-08 09:34:26,232 - climada.entity.measures.base - INFO - Cutting events whose damage have a frequency > 0.0255.\n",
-      "2019-03-08 09:34:26,233 - climada.engine.impact - INFO - Exposures matching centroids found in centr_TC\n",
-      "2019-03-08 09:34:26,234 - climada.engine.impact - INFO - Calculating damage for 50 assets (>0) and 2405 events.\n",
-      "2019-03-08 09:34:30,280 - climada.engine.impact - INFO - Exposures matching centroids found in centr_TC\n",
-      "2019-03-08 09:34:30,282 - climada.engine.impact - INFO - Calculating damage for 50 assets (>0) and 2405 events.\n",
-      "2019-03-08 09:34:30,301 - climada.engine.impact - INFO - Exposures matching centroids found in centr_TC\n",
-      "2019-03-08 09:34:30,304 - climada.engine.impact - INFO - Calculating damage for 50 assets (>0) and 2405 events.\n"
+      "2019-03-12 15:38:57,985 - climada.entity.measures.base - INFO - Cutting events whose damage have a frequency > 0.0255.\n",
+      "2019-03-12 15:38:57,987 - climada.engine.impact - INFO - Exposures matching centroids found in centr_TC\n",
+      "2019-03-12 15:38:57,988 - climada.engine.impact - INFO - Calculating damage for 50 assets (>0) and 2405 events.\n",
+      "2019-03-12 15:39:02,487 - climada.engine.impact - INFO - Exposures matching centroids found in centr_TC\n",
+      "2019-03-12 15:39:02,488 - climada.engine.impact - INFO - Calculating damage for 50 assets (>0) and 2405 events.\n",
+      "2019-03-12 15:39:02,506 - climada.engine.impact - INFO - Exposures matching centroids found in centr_TC\n",
+      "2019-03-12 15:39:02,507 - climada.engine.impact - INFO - Calculating damage for 50 assets (>0) and 2405 events.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(<Figure size 288x288 with 1 Axes>,\n",
-       " [<matplotlib.axes._subplots.AxesSubplot at 0x1a28f12470>])"
+       " [<matplotlib.axes._subplots.AxesSubplot at 0x1c2c2fe7f0>])"
       ]
      },
      "execution_count": 2,
@@ -305,19 +296,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-08 09:34:33,040 - climada.util.checker - DEBUG - Centroids.region_id not set. \n",
-      "2019-03-08 09:34:35,157 - climada.entity.measures.base - DEBUG - Transforming impact functions.\n",
-      "2019-03-08 09:34:35,157 - climada.entity.measures.base - INFO - Cutting events whose damage have a frequency > 0.0455.\n",
-      "2019-03-08 09:34:35,158 - climada.engine.impact - INFO - Exposures matching centroids found in centr_TC\n",
-      "2019-03-08 09:34:35,160 - climada.engine.impact - INFO - Calculating damage for 50 assets (>0) and 2405 events.\n",
-      "2019-03-08 09:34:35,498 - climada.entity.exposures.base - INFO - Matching 50 exposures with 2500 centroids.\n"
+      "2019-03-12 15:39:07,350 - climada.entity.measures.base - INFO - Cutting events whose damage have a frequency > 0.0455.\n",
+      "2019-03-12 15:39:07,351 - climada.engine.impact - INFO - Exposures matching centroids found in centr_TC\n",
+      "2019-03-12 15:39:07,353 - climada.engine.impact - INFO - Calculating damage for 50 assets (>0) and 2405 events.\n",
+      "2019-03-12 15:39:07,683 - climada.entity.exposures.base - INFO - Matching 50 exposures with 2500 centroids.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a2934e0b8>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x11c602400>]],\n",
        "       dtype=object))"
       ]
      },
@@ -414,19 +403,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-08 09:34:42,808 - climada.util.checker - DEBUG - Centroids.region_id not set. \n",
-      "2019-03-08 09:34:42,826 - climada.engine.impact - INFO - Exposures matching centroids found in centr_TC\n",
-      "2019-03-08 09:34:42,827 - climada.engine.impact - INFO - Calculating damage for 50 assets (>0) and 2405 events.\n",
-      "2019-03-08 09:34:42,844 - climada.entity.measures.base - DEBUG - Transforming impact functions.\n",
-      "2019-03-08 09:34:42,844 - climada.engine.impact - INFO - Exposures matching centroids found in centr_TC\n",
-      "2019-03-08 09:34:42,846 - climada.engine.impact - INFO - Calculating damage for 50 assets (>0) and 2405 events.\n"
+      "2019-03-12 15:39:15,594 - climada.engine.impact - INFO - Exposures matching centroids found in centr_TC\n",
+      "2019-03-12 15:39:15,595 - climada.engine.impact - INFO - Calculating damage for 50 assets (>0) and 2405 events.\n",
+      "2019-03-12 15:39:15,612 - climada.engine.impact - INFO - Exposures matching centroids found in centr_TC\n",
+      "2019-03-12 15:39:15,613 - climada.engine.impact - INFO - Calculating damage for 50 assets (>0) and 2405 events.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(<Figure size 288x288 with 1 Axes>,\n",
-       " [<matplotlib.axes._subplots.AxesSubplot at 0x1a27ac1630>])"
+       " [<matplotlib.axes._subplots.AxesSubplot at 0x1c2edcb240>])"
       ]
      },
      "execution_count": 4,
@@ -774,7 +761,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-08 09:34:43,146 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/tutorial_meas_set.p\n"
+      "2019-03-12 15:39:15,943 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/tutorial_meas_set.p\n"
      ]
     }
    ],
