Link existing LitPop exposure data for download from https://doi.org/10.3929/ethz-b-000331316

--- a/script/tutorial/climada_entity_LitPop.ipynb
+++ b/script/tutorial/climada_entity_LitPop.ipynb
@@ -29,7 +29,15 @@
     "\n",
     "Regarding the GDP (nominal GDP at current USD) and income group values, they are obtained from the [World Bank](https://data.worldbank.org) using the [pandas-datareader](https://pandas-datareader.readthedocs.io/en/latest/remote_data.html) API. If a value is missing, the value of the closest year is considered. When no values are provided from the World Bank, we use the [Natural Earth](https://www.naturalearthdata.com) repository values.\n",
     "\n",
-    "The `LitPop` class inherits from the [`Exposures`](climada_entity_Exposures.ipynb#Exposures-class) class. It provides a `set_country()` method which enables to model a country using different settings. The first time a night light image is used, it is downloaded and stored locally. This might take some time. \n"
+    "\n",
+    "_Initiating LitPop():_\n",
+    "\n",
+    "The `LitPop` class inherits from the [`Exposures`](climada_entity_Exposures.ipynb#Exposures-class) class. It provides a `set_country()` method which enables to compute exposure data for a country using different settings and input data. The first time a nightlight image is used, it is downloaded and stored locally. This might take some time.\n",
+    "\n",
+    "*NOTE / Downloading existing LitPop exposure data:*\n",
+    "\n",
+    "Readily computed LitPop exposure data, distributing produced capital of 2014 at a resolution of 30 arcsec can be downloaded from the ETH Research Repository: https://doi.org/10.3929/ethz-b-000331316.\n",
+    "The dataset contains gridded data for more than 200 countries as CSV files. [These can be imported into Python using the Exposures class, i.e. *Exposures(pd.read_csv(file_name))*]\n"
    ]
   },
   {
